[package]
name = "rust_redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
anyhow = "1.0"
libc = "0.2"
mpsc = "0.2.5"
rand = { version = "0.8", features = ["small_rng"] }
futures = "0.3.31"
metrics-util = "0.19.0"
stars = "0.1.0"
statrs = "0.18.0"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
